kubernetes/legacy/02-crontab.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: legacy-crontabs
  namespace: legacy
spec:
  strategy:
    type: RollingUpdate
  replicas: 0
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: crontabs
        proc: cron
        k8s-app: legacy-crontabs
        lang: php
        branch: master
    spec:
      containers:
      - name: legacy-crontabs
        image: registry.clickyab.ae/clickyab/crontabs:master.32
      imagePullSecrets:
        - name: regsecret
---
