kubernetes/legacy/03-front.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: legacy-front
  namespace: legacy
spec:
  strategy:
    type: RollingUpdate
  replicas: 3
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: show-ad
        proc: front
        k8s-app: legacy-front
        lang: php
        branch: master
    spec:
      containers:
      - name: legacy-front
        image: registry.clickyab.ae/clickyab/legacy-front:master.475
      imagePullSecrets:
        - name: regsecret
---
