kubernetes/legacy/05-00-deployment-legacy-crontabs.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: legacy-crontabs
  namespace: legacy
spec:
  strategy:
    type: RollingUpdate
  replicas: 0
  template:
    metadata:
      labels:
        app: crontabs
        proc: cron
        k8s-app: legacy-crontabs
        lang: php
        branch: master
    spec:
      containers:
      - name: legacy-crontabs
        image: registry.clickyab.ae/clickyab/crontabs:master.32
      imagePullSecrets:
        - name: regsecret
