kubernetes/legacy/05-01-deployment-legacy-front.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: legacy-front
  namespace: legacy
spec:
  strategy:
    type: RollingUpdate
  replicas: 3
  template:
    metadata:
      labels:
        app: show-ad
        proc: front
        k8s-app: legacy-front
        lang: php
        branch: master
    spec:
      containers:
      - name: legacy-front
        image: registry.clickyab.ae/clickyab/legacy-front:master.475
      imagePullSecrets:
        - name: regsecret
