kubernetes/legacy/05-02-deployment-redis.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
  namespace: legacy
  labels:
    k8s-app: redis
    service: redis
    namespace: legacy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        namespace: legacy
        service: redis
        branch: dev
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: redis
          image: redis
          ports:
            - name: redis
              containerPort: 6379
          resources:
            limits:
              memory: "7680Mi"
            requests:
              memory: "6144Mi"
