kubernetes/legacy/04-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: front-legecy-service
  namespace: legacy
  labels:
    k8s-app: legacy-front
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "LegacyFrontService"
spec:
  selector:
    k8s-app: legacy-front
  ports:
  - name: showad
    targetPort: 80
    port: 9000
    protocol: TCP
