kubernetes/legacy/06-00-service-front.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: front-legecy-service
  namespace: legacy
  labels:
    k8s-app: legacy-front
spec:
  selector:
    k8s-app: legacy-front
  ports:
  - name: showad
    targetPort: 80
    port: 9000
    protocol: TCP
