kubernetes/legacy/06-01-service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: legacy
  labels:
    k8s-app: redis
    service: redis
    namespace: legacy
    branch: dev
spec:
  selector:
    service: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
