kubernetes/legacy/05-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front-ingress
  namespace: legacy
  annotations:
    ingress.kubernetes.io/use-gzip: "false"
spec:
  rules:
  - host: a22.clickyab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: front-legecy-service
          servicePort: 9000
#  - host: app.clickyab.com
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: front-legecy-service
#          servicePort: 9000
