kubernetes/legacy/07-00-ingress-front-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front-ingress
  namespace: legacy
spec:
  rules:
  - host: a.clickyab.com
    http:
      paths:
      - backend:
          serviceName: front-legecy-service
          servicePort: 9000
        path: /ads
  - host: a.clickyab.com
    http:
      paths:
      - backend:
          serviceName: front-legecy-service
          servicePort: 9000
        path: /show.js
  - host: a-old.clickyab.com
    http:
      paths:
      - backend:
          serviceName: front-legecy-service
          servicePort: 9000
        path: /conversion
  - host: a.clickyab.com
    http:
      paths:
      - backend:
          serviceName: front-legecy-service
          servicePort: 9000
        path: /effect.js
  - host: a.clickyab.com
    http:
      paths:
      - backend:
          serviceName: front-legecy-service
          servicePort: 9000
        path: /robots.txt
