kubernetes/legacy/07-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front-ingress
  namespace: legacy
  annotations:
    ingress.kubernetes.io/use-gzip: "false"
spec:
  rules:
  - host: a.clickyab.com
    http:
      paths:
      - path: /ads
        backend:
          serviceName: front-legecy-service
          servicePort: 9000
  - host: a.clickyab.com
    http:
      paths:
      - path: /show.js
        backend:
          serviceName: front-legecy-service
          servicePort: 9000
  - host: a.clickyab.com
    http:
      paths:
      - path: /conversion
        backend:
          serviceName: front-legecy-service
          servicePort: 9000
